fix footer padding on mobile

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -71,12 +71,6 @@ main {
   }
 }
 
-article {
-  @media (max-width: $mobile) {
-    padding: $line-height * 0.5 0 $line-height * 2;
-  }
-}
-
 p {
   margin: $unit 0;
 }
@@ -350,10 +344,6 @@ ul.links {
   margin-top: 0;
   list-style: none;
   padding-left: 0;
-
-  @media (max-width: $mobile) {
-    padding: $unit * 4 0;
-  }
 
   li {
     display: inline;
